<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:gravity="center">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/foto"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="35dp">

            <ImageView
                android:src="@drawable/img_localizacao"
                android:layout_width="30dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/morada"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rua"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <ImageView
            android:src="@drawable/telemovel"
            android:layout_width="30dp"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/txt_telomovel"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_telemovel"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_email_address"
            android:src="@drawable/img_email" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_endereco"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <ImageView
            android:src="@drawable/github_logo"
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/git"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/git_email"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <ImageView
            android:src="@drawable/perfil_azul"
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/nascimento"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_01_10_1986"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/arrow_back"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/back_arrow"
            android:text="@string/voltar"
            android:textAlignment="center"
            android:background="@drawable/back_arrow"/>

    </LinearLayout>

</LinearLayout>