<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:text="@string/exp_europass_1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:text="@string/exp_europass_2"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:text="@string/exp_europass_3"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/arrow_back"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:background="@drawable/back_arrow"
                    android:src="@drawable/back_arrow"
                    android:text="@string/voltar"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>