<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_skills"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/skills" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/personal_skills"
                android:textColor="@color/colorTextSplashScreen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/languages"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Spoken"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Written"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Read"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Portuguese" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Native" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Native" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Native" />


            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="English" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="B2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="B2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="B2" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Communication skills:"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/com_skills" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="As a worker:"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="I am the kind that will always dedicate the maximum as possible to colaborate." />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:src="@drawable/java_img" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/java_des" />

            </TableRow>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_objectives"
                android:textColor="@color/colorTextSplashScreen"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:src="@drawable/kotlin_img" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/kotlin_desc" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:src="@drawable/flutter_img" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/desc_flutter" />

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/arrow_back"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back_arrow"
                    android:text="@string/voltar"
                    android:textAlignment="center"
                    android:background="@drawable/back_arrow"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
